--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -1,34 +1,38 @@
-<!-- item_alarm.xml -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_margin="8dp"
     android:padding="16dp"
-    android:background="@drawable/border2"
-    android:layout_margin="8dp">
+    android:background="@drawable/border2">
 
-    <!-- Medicine Name -->
     <TextView
         android:id="@+id/medicineNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="161dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="4dp"
         android:text="Medicine Name"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <!-- Dosage -->
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.787"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/timeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="4dp"
+        android:layout_width="103dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="8dp"
         android:text="12:00"
         android:textColor="@color/white"
-        android:layout_marginRight="50dp"
-        android:textSize="34sp" />
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/dosageTextView"
@@ -37,8 +41,30 @@
         android:text="Dosage"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:layout_marginTop="4dp" />
+        app:layout_constraintStart_toStartOf="@id/medicineNameTextView"
+        app:layout_constraintTop_toBottomOf="@id/medicineNameTextView" />
 
-    <!-- Time -->
+    <TextView
+        android:id="@+id/amPmTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="AM"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@id/timeTextView"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/alarmSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
