alarm with shelf

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +7,7 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
+    <!-- Medicine Name Label -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,41 +20,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
-    <EditText
-        android:id="@+id/medicineName"
+    <!-- Spinner for Medicine Name -->
+    <Spinner
+        android:id="@+id/medicineSpinner"
         android:layout_width="325dp"
         android:layout_height="56dp"
         android:layout_marginTop="132dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:inputType="text"
         android:padding="12dp"
-        android:textColor="@color/black"
-        android:textColorHint="#808080"
-        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.546"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Dosage Label -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Dosage"
-        android:textStyle="bold"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicineName" />
+        app:layout_constraintTop_toBottomOf="@+id/medicineSpinner" />
 
+    <!-- Dosage EditText -->
     <EditText
         android:id="@+id/dosage"
         android:layout_width="150dp"
         android:layout_height="56dp"
         android:layout_marginTop="48dp"
         android:background="@android:drawable/editbox_background_normal"
-        android:inputType="text"
+        android:inputType="number"
         android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="#808080"
@@ -62,35 +60,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicineName" />
+        app:layout_constraintTop_toBottomOf="@+id/medicineSpinner" />
 
+    <!-- Type Label -->
+
+    <!-- Type Spinner -->
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Type"
-        android:textStyle="bold"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.582"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicineName" />
+        app:layout_constraintTop_toBottomOf="@+id/medicineSpinner" />
 
-    <EditText
+    <!-- TimePicker for Alarm -->
+    <Spinner
         android:id="@+id/type"
         android:layout_width="150dp"
         android:layout_height="56dp"
-        android:layout_marginTop="48dp"
-        android:background="@android:drawable/editbox_background_normal"
-        android:inputType="text"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#FFFFFF"
         android:padding="12dp"
-        android:textColor="@color/black"
-        android:textColorHint="#808080"
-        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicineName" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TimePicker
         android:id="@+id/timePicker"
@@ -98,39 +97,43 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="40dp"
-        android:timePickerMode="spinner"
+        android:amPmTextColor="@color/black"
         android:numbersBackgroundColor="@color/black"
         android:numbersInnerTextColor="@color/black"
         android:numbersSelectorColor="@color/black"
-        android:amPmTextColor="@color/black"
         android:numbersTextColor="@color/black"
+        android:timePickerMode="spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/type" />
 
+    <!-- Back Button -->
+
+    <!-- Alarm Label -->
     <ImageView
         android:id="@+id/btn_back"
         android:layout_width="49dp"
         android:layout_height="49dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow" />
 
+    <!-- Save Button -->
     <TextView
         android:id="@+id/Alarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="48dp"
         android:text="@string/alarm"
         android:textColor="@color/black"
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.872"
+        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -147,6 +150,5 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timePicker" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
