--- a/app/src/main/res/layout/medicine_item.xml
+++ b/app/src/main/res/layout/medicine_item.xml
@@ -3,8 +3,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@drawable/border"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:background="@drawable/border2">
 
     <!-- Medicine Count -->
 
@@ -16,30 +16,37 @@
         android:layout_marginTop="8dp"
         android:contentDescription="Edit medicine"
         android:text="Edit"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#f9f9f9"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/medicineName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Medicine Name"
+        android:textColor="#f9f9f9"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/medicineCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5"
-        android:textColor="#000000"
+        android:textColor="#f9f9f9"
         android:textSize="16sp" />
 
     <!-- Medicine Name -->
+
+    <!-- Add this after the medicine name TextView -->
     <TextView
-        android:id="@+id/medicineName"
+        android:id="@+id/medicineExpiration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Medicine Name"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:text="Expires: DD/MM/YYYY"
+        android:textColor="#f9f9f9"
+        android:textSize="14sp" />
 
-    <!-- Edit Text Button (Now a TextView) -->
-
-    <!-- Delete Button -->
 
     <ImageView
         android:id="@+id/deleteButton"
